# preplay-AI

./: .gitignore  .gitmodules  .python-version  CLAUDE.md  README.md  alphazero.py  alphazero_craftax.py  base_algo.py  base_algorithm.py  base_algorithm2.py  base_simple.py  conda_env.yaml  craftax-multigoal-test.ipynb  craftax-test.ipynb  craftax_configs.py  craftax_env.py  craftax_experiment_configs.py  craftax_game_logic.py  craftax_multigoal_trainer.py  craftax_observer.py  craftax_ppo_trainer.py  craftax_simulation_configs.py  craftax_trainer.py  craftax_usfa.py  craftax_utils.py  craftax_web_env.py  dyna.py  dyna_craftax.py  her.py  her_craftax.py  housemaze-mazes.ipynb  housemaze-sf-test.ipynb  housemaze-test.ipynb  housemaze_experiments.py  housemaze_observer.py  housemaze_trainer.py  jaxmaze-mazes.ipynb  jaxmaze-nearby-objects-test.ipynb  jaxmaze-test.ipynb  jaxmaze_observer.py  (+34 more)
archive/: alphazero.py  alphazero_craftax.py  base_algorithm.py  keyroom.py  keyroom_symbolic.py  minigrid_common.py  scratchwork.py  train_jaxmaze.ipynb  trainer_jaxmaze_v1.py
configs/: config.yaml  config_craftax.yaml
configs/alg/: alphazero.yaml  dyna.yaml  dyna_craftax.yaml  dyna_jaxmaze.yaml  experiments.sh  her.yaml  her_craftax.yaml  ppo.yaml  pqn-craftax.yaml  pqn.yaml  preplay.yaml  preplay_craftax.yaml  preplay_craftax_ai.yaml  preplay_jaxmaze.yaml  ql-craftax.yaml  ql-sf.yaml  ql.yaml  qlearning_craftax.yaml  qlearning_craftax_multigoal.yaml  qlearning_jaxmaze.yaml  usfa-craftax.yaml  usfa.yaml  usfa_craftax.yaml  usfa_jaxmaze.yaml
configs/debug/: short.yaml
configs/rlenv/: craftax-10m.yaml  craftax-1m-dyna.yaml  craftax-1m.yaml  craftax-dyna-multigoal.yaml  craftax-multigoal.yaml  craftax.yaml  jaxmaze.yaml
configs/user/: wilka.yaml
craftax_cache/optimal_paths/: path_15_(24, 24)_22.npy  path_15_(35, 25)_21.npy  path_15_(35, 25)_22.npy  path_15_(45, 32)_21.npy  path_15_(46, 8)_21.npy  path_20_(10, 21)_22.npy  path_20_(15, 15)_10.npy  path_20_(15, 15)_22.npy  path_20_(18, 30)_21.npy  path_20_(18, 30)_22.npy  path_20_(25, 22)_22.npy  path_3_(17, 28)_10.npy  path_3_(29, 15)_10.npy  path_3_(32, 30)_10.npy  path_3_(32, 30)_21.npy  path_95_(2, 27)_10.npy  path_95_(3, 19)_10.npy  path_95_(7, 16)_21.npy  path_95_(9, 3)_10.npy  path_95_(9, 3)_21.npy  path_95_(9, 3)_22.npy
craftax_cache/training_paths/: path_15_(24, 24)_10.npy  path_15_(24, 24)_21.npy  path_15_(24, 24)_22.npy  path_15_(35, 25)_10.npy  path_15_(35, 25)_22.npy  path_15_(45, 32)_10.npy  path_15_(45, 32)_22.npy  path_15_(46, 8)_10.npy  path_15_(46, 8)_22.npy  path_20_(10, 21)_10.npy  path_20_(10, 21)_21.npy  path_20_(15, 15)_10.npy  path_20_(15, 15)_21.npy  path_20_(18, 30)_10.npy  path_20_(18, 30)_21.npy  path_20_(18, 30)_22.npy  path_20_(25, 22)_10.npy  path_20_(25, 22)_21.npy  path_3_(17, 28)_21.npy  path_3_(17, 28)_22.npy  path_3_(28, 25)_10.npy  path_3_(28, 25)_21.npy  path_3_(28, 25)_22.npy  path_3_(29, 15)_21.npy  path_3_(29, 15)_22.npy  path_3_(32, 30)_21.npy  path_3_(32, 30)_22.npy  path_95_(2, 27)_21.npy  path_95_(2, 27)_22.npy  path_95_(3, 19)_21.npy  path_95_(3, 19)_22.npy  path_95_(7, 16)_10.npy  path_95_(7, 16)_21.npy  path_95_(7, 16)_22.npy  path_95_(9, 3)_21.npy  path_95_(9, 3)_22.npy
