[project]
name = "preplay-ai"
version = "0.1.0"
description = "Multitask Preplay - Model-based RL research in JAX"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Wilka Carvalho", email = "wcarvalho92@gmail.com"},
]
dependencies = [
    # JAX ecosystem
    "jax[cuda12]==0.4.21; sys_platform == 'linux'",
    "jax==0.4.21; sys_platform != 'linux'",
    "jaxlib==0.4.21",
    "flax>=0.8.4",
    "optax>=0.2.1",
    "chex>=0.1.86",
    "rlax>=0.1.6",
    # RL environments & utilities
    "gymnax",
    "craftax",
    "flashbax @ git+https://github.com/instadeepai/flashbax.git@1bda7f1765a555f41814886e67f9560c9ea723ea",
    "mctx>=0.0.5",
    "jaxneurorl",
    "jaxmaze",
    # Config & logging
    "hydra-core",
    "omegaconf",
    "wandb",
    # Compute utilities
    "scipy>=1.12.0,<1.13",
    "numpy<2",
    # Serialization
    "safetensors",
    # Utilities
    "tqdm>=4.66.2",
    "typing_extensions>=4.11.0",
    "ipdb",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipywidgets",
    "polars",
]

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py310"

[tool.ruff.format]
indent-style = "space"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff",
]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"]
required-environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

override-dependencies = ["jax==0.4.21"]

[tool.uv.sources]
jaxneurorl = { path = "libraries/jaxneurorl", editable = true }
jaxmaze = { path = "libraries/jaxmaze", editable = true }
